fix: adjust spacing and styles in PromptInput and InputGroup components

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -34,7 +34,7 @@
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.963 0.0016 148.69 / 80%);
+  --sidebar: oklch(0.963 0.0016 148.69 / 75%);
   --sidebar-impact: oklch(0.964 0 271.152);
   --sidebar-foreground: oklch(0 0 0 / 90%);
   --sidebar-primary: oklch(0.205 0 0);
@@ -83,7 +83,7 @@
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.2 0 268 / 80%);
+  --sidebar: oklch(0.2 0 268 / 75%);
   --sidebar-impact: #252525;
   --sidebar-foreground: oklch(1 0 0 / 90%);
   --sidebar-primary: oklch(0.488 0.243 264.376);
